Fixed some layout issues with character tools and character profiles.

--- a/public/styles.css
+++ b/public/styles.css
@@ -234,6 +234,9 @@ html, body {
 
 .itemLevel {
   color: gold; }
+#characterProfileDiv{
+  position:relative;
+}
 .reputationBarBack{
   position:absolute;
   float:left;
